package Screens;

import javax.swing.*;
import java.awt.event.KeyEvent;

public abstract class Screen extends JPanel{
    public void keyTyped(KeyEvent e) {

    }

    public void keyPressed(KeyEvent e) {

    }

    public void keyReleased(KeyEvent e) {

    }
}
